--- a/src/views/index.html
+++ b/src/views/index.html
@@ -4,10 +4,38 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Youtube</title>
+    <link rel="stylesheet" href="">
 </head>
 <body>
-    Salom
+    
+    <header class="header">
+        <ul class="nav-bar">
+            <li class="nav-item">
+                <a href="/" class="nav-link">
+                    <img src="/images/youtube.svg" alt="youtube">
+                </a>
+            </li>
+            <li class="nav-item">
+                <form action="" class="nav-form">
+                    <input type="text" name="" id="">
+                    <button>
+                        <img src="/images/search.svg" alt="search">
+                    </button>
+                </form>
+            </li>
+            <li class="nav-item">
+                <a href="/login" class="nav-link">
+                    <img src="/images/video-upload" alt="video upload">
+                </a>
+            </li>
+        </ul>
+    </header>
+    <main>
+
+    </main>
+
     <script src="/js/request.js"></script>
+    <script src="https://kit.fontawesome.com/e5b1ea226b.js" crossorigin="anonymous"></script>
 </body>
 </html>
