--- a/src/views/index.html
+++ b/src/views/index.html
@@ -5,36 +5,38 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Youtube</title>
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
     
-    <header class="header">
-        <ul class="nav-bar">
-            <li class="nav-item">
-                <a href="/" class="nav-link">
-                    <img src="/images/youtube.svg" alt="youtube">
-                </a>
-            </li>
-            <li class="nav-item">
-                <form action="" class="nav-form">
-                    <input type="text" name="" id="">
-                    <button>
-                        <img src="/images/search.svg" alt="search">
-                    </button>
-                </form>
-            </li>
-            <li class="nav-item">
-                <a href="/login" class="nav-link">
-                    <img src="/images/video-upload" alt="video upload">
-                </a>
-            </li>
-        </ul>
+    <header class="nav">
+        <div class="container">
+            <ul class="nav-list">
+                <li class="nav-item">
+                    <a href="/" class="nav-link">
+                        <img class="yout-img" src="/images/youtube.png" alt="youtube">
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <form action="" class="nav-form">
+                        <input class="search-input" type="search" name="search" id="search_videos">
+                        <button class="search-button">
+                            <img class="search-img" src="/images/search.svg" alt="search">
+                        </button>
+                    </form>
+                </li>
+                <li class="nav-item">
+                    <a href="/login" class="nav-link">
+                        <img class="upload-img" src="/images/video-upload.svg" alt="video upload">
+                    </a>
+                </li>
+            </ul>
+        </div>
     </header>
     <main>
-
+        
     </main>
-
+    
     <script src="/js/request.js"></script>
     <script src="https://kit.fontawesome.com/e5b1ea226b.js" crossorigin="anonymous"></script>
 </body>
