--- a/src/views/index.html
+++ b/src/views/index.html
@@ -33,8 +33,78 @@
             </ul>
         </div>
     </header>
-    <main>
-        
+    <main class="main">
+        <!-- <div class="container"> -->
+            <div class="users">
+                <ul class="user-list">
+                    <li class="user-item">
+                        <img class="user-image" src="http://picsum.photos/40" alt="igm">
+                        <p class="user-name">Imron</p>
+                    </li>
+                    <li class="user-item">
+                        <img class="user-image" src="http://picsum.photos/40" alt="igm">
+                        <p class="user-name">Imron</p>
+                    </li>
+                    <li class="user-item">
+                        <img class="user-image" src="http://picsum.photos/40" alt="igm">
+                        <p class="user-name">Imron</p>
+                    </li>
+                    <li class="user-item">
+                        <img class="user-image" src="http://picsum.photos/40" alt="igm">
+                        <p class="user-name">Imron</p>
+                    </li>
+                    <li class="user-item">
+                        <img class="user-image" src="http://picsum.photos/40" alt="igm">
+                        <p class="user-name">Imron</p>
+                    </li>
+                    <li class="user-item">
+                        <img class="user-image" src="http://picsum.photos/40" alt="igm">
+                        <p class="user-name">Imron</p>
+                    </li>
+                    <li class="user-item">
+                        <img class="user-image" src="http://picsum.photos/40" alt="igm">
+                        <p class="user-name">Imron</p>
+                    </li>
+                    <li class="user-item">
+                        <img class="user-image" src="http://picsum.photos/40" alt="igm">
+                        <p class="user-name">Imron</p>
+                    </li>
+                    <li class="user-item">
+                        <img class="user-image" src="http://picsum.photos/40" alt="igm">
+                        <p class="user-name">Imron</p>
+                    </li>
+                    <li class="user-item">
+                        <img class="user-image" src="http://picsum.photos/40" alt="igm">
+                        <p class="user-name">Imron</p>
+                    </li>
+                    <li class="user-item">
+                        <img class="user-image" src="http://picsum.photos/40" alt="igm">
+                        <p class="user-name">Imron</p>
+                    </li>
+                    <li class="user-item">
+                        <img class="user-image" src="http://picsum.photos/40" alt="igm">
+                        <p class="user-name">Imron</p>
+                    </li>
+                    <li class="user-item">
+                        <img class="user-image" src="http://picsum.photos/40" alt="igm">
+                        <p class="user-name">Imron</p>
+                    </li>
+                    <li class="user-item">
+                        <img class="user-image" src="http://picsum.photos/40" alt="igm">
+                        <p class="user-name">Imron</p>
+                    </li>
+                </ul>
+            </div>
+            <div class="videos">
+                <ul class="vidoe-list">
+                    <li class="video-item">
+                        <video class="upload-video" controls>
+                            <source src="/images/video.mp4">
+                        </video>
+                    </li>
+                </ul>
+            </div>
+        <!-- </div> -->
     </main>
     
     <script src="/js/request.js"></script>
