--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -84,9 +84,8 @@ body {
 .user-list {
     width: 300px;
     height: 93vh;
-    border: 1px solid red;
     overflow-y: scroll;
-    /* padding: 20px; */
+    border-right: 1px solid rgba(0,0,0,0.2);
 }
 
 .user-item {
@@ -112,4 +111,20 @@ body {
     font-size: 25px;
     font-weight: bold;
     margin-left: 10px;
+}
+
+.videos {
+    margin: 0 auto;
+    width: 100%;
+    height: 93vh;
+    overflow-y: scroll;
+}
+
+.vidoe-list {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.video-item {
+    margin: 25px;
 }
