--- a/src/views/index.html
+++ b/src/views/index.html
@@ -36,10 +36,10 @@
     <main class="main">
         <div class="users">
             <ul class="user-list">
-                <li class="user-item">
+                <!-- <li class="user-item">
                     <img class="user-image" src="http://picsum.photos/40" alt="igm">
                     <p class="user-name">Imron</p>
-                </li> 
+                </li>  -->
             </ul>
         </div>
         <div class="videos">
@@ -54,6 +54,6 @@
     </main>
     
     <script src="/js/request.js"></script>
-    <script src="https://kit.fontawesome.com/e5b1ea226b.js" crossorigin="anonymous"></script>
+    <script src="/js/index.js"></script>
 </body>
 </html>
