--- a/src/views/register.html
+++ b/src/views/register.html
@@ -16,7 +16,7 @@
             <input type="text" name="text" id="username" placeholder="Your name..." required>
             <input type="password" name="password" id="password" placeholder="Your password" required>
             <input type="email" name="email" id="email" placeholder="Your email">
-            <input type="file" name="file" id="fileImage">
+            <input class="custom-file-input" type="file" name="file" id="fileImage">
             <label>
                 <a class="login"href="/login">Sign in</a>
                 <button type="submit" id="button" class="button">Sing up</button>
