--- a/src/views/upload.html
+++ b/src/views/upload.html
@@ -4,9 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Upload</title>
 </head>
 <body>
-    UPLOAD
+    <section>
+        <div>
+            <p></p>
+            <form action="" method="POST">
+                <input type="file" name="file" id="upload_video">
+                <button type="submit" id="upload_button">Upload a file</button>
+            </form>
+        </div>
+        <div>
+            <ul class="vidoe-list">
+                <li class="video-item">
+                    <video class="upload-video" controls width="250px">
+                        <source src="/images/video.mp4">
+                    </video>
+                    <p>name</p>
+                </li> 
+            </ul>
+        </div>
+    </section>
 </body>
 </html>
