Changed videos design

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -45,10 +45,22 @@
         <div class="videos">
             <ul class="vidoe-list">
                 <li class="video-item">
-                    <video class="upload-video" controls width="350px">
+                    <video class="upload-video" controls width="450px">
                         <source src="/images/video.mp4">
                     </video>
-                </li> 
+                    <div class="videos-info">
+                        <div class="vidoe-info">
+                            <img class="video-avatar" src="http://picsum.photos/40" alt="igm">
+                            <span>
+                                <p class="video-user">Imron</p>
+                                <p class="video-name">Video name</p>
+                            </span>
+                        </div>
+                        <button class="down-button" type="button">
+                            <img class="down-image" src="/images/download.png" alt="download">
+                        </button>
+                    </div>
+                </li>   
             </ul>
         </div>
     </main>
