--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -114,7 +114,6 @@ body {
 }
 
 .videos {
-    margin: 0 auto;
     width: 100%;
     height: 93vh;
     overflow-y: scroll;
@@ -123,8 +122,60 @@ body {
 .vidoe-list {
     display: flex;
     flex-wrap: wrap;
+    margin-left: 55px;
 }
 
 .video-item {
     margin: 25px;
+}
+
+.videos-info {
+    margin-top: 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 3px;
+}
+
+.vidoe-info {
+    display: flex;
+}
+
+.video-avatar {
+    border-radius: 50%;
+    width: 50px;
+}
+
+.vidoe-info span {
+    margin-left: 10px;
+}
+
+.video-user {
+    font-size: 23px;
+    font-weight: bold;
+}
+
+.video-name {
+    font-size: 20px;
+    font-weight: 550;
+}
+
+.down-button {
+    align-self: flex-start;
+    width: 30px;
+    height: 30px;
+    border: none;
+    background-color: transparent;
+    outline-style: none;
+    cursor: pointer;
+    border-radius: 50%;
+    transition: 0.3s;
+}
+
+.down-button:hover {
+    background-color: rgba(0,0,0,0.2);
+}
+
+.down-image {
+    width: 100%;
 }
