--- a/src/views/index.html
+++ b/src/views/index.html
@@ -26,9 +26,9 @@
                     </form>
                 </li>
                 <li class="nav-item">
-                    <a href="/login" class="nav-link">
+                    <button type="button" class="upload-btn">
                         <img class="upload-img" src="/images/video-upload.svg" alt="video upload">
-                    </a>
+                    </button>
                 </li>
             </ul>
         </div>
