Created login page

--- a/src/views/login.html
+++ b/src/views/login.html
@@ -13,7 +13,7 @@
         <h1>Login now</h1>
         <p id="display"></p>
         <form id="form">
-            <input type="text" name="text" id="username" placeholder="Your name" required>
+            <input type="text" name="username" id="username" placeholder="Your name" required>
             <input type="password" name="password" id="password" placeholder="Your password" required>
             <label>
                 <a href="/register" class="register">Create an account</a>
