POST method of upload

--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -112,6 +112,7 @@ body {
 .user-image {
     border-radius: 50%;
     width: 50px;
+    height: 50px;
 }
 
 .user-name {
@@ -151,6 +152,7 @@ body {
 .video-avatar {
     border-radius: 50%;
     width: 50px;
+    height: 50px;
 }
 
 .vidoe-info span {
