Fetch and render videos

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -44,8 +44,8 @@
         </div>
         <div class="videos">
             <ul class="vidoe-list">
-                <li class="video-item">
-                    <video class="upload-video" controls width="450px">
+                <!-- <li class="video-item">
+                    <video class="upload-video" controls="true" width="450px">
                         <source src="/images/video.mp4">
                     </video>
                     <div class="videos-info">
@@ -60,7 +60,7 @@
                             <img class="down-image" src="/images/download.png" alt="download">
                         </button>
                     </div>
-                </li>   
+                </li>    -->
             </ul>
         </div>
     </main>
