--- a/src/views/upload.html
+++ b/src/views/upload.html
@@ -11,9 +11,6 @@
     <section class="upload-section">
         <div class="container">
             <div class="form-section">
-                <div>   
-                    
-                </div>
                 <form id="upload_form" action="/api/upload" method="POST">
                     <label>
                         <h2>Upload media</h2>
@@ -22,6 +19,7 @@
                     <input type="file" name="file" id="upload_video" required>
                     <button type="submit" id="upload_button">Upload a file</button>
                 </form>
+                <a href="/" class="home-page" id="homep"></a>
             </div>
             <div class="uploaded-section">
                 <div class="uploaded-title">
