Rendering uploaded videos

--- a/src/views/upload.html
+++ b/src/views/upload.html
@@ -26,18 +26,19 @@
                     <h2>Uploaded vidoes</h2>
                 </div>
                 <ul class="vidoe-list">
-                    <li class="video-item">
+                    <!-- <li class="video-item">
                         <button class="del-button">&times;</button>
                         <video class="upload-video" controls width="220px">
                             <source src="/images/video.mp4">
                         </video>
                         <p class="video-name" contenteditable="true">name</p>
-                    </li>  
+                    </li>   -->
                 </ul>
             </div>
         </div>
     </section>
 
+    <script src="/js/request.js"></script>
     <script src="/js/upload.js"></script>
 </body>
 </html>
