--- a/src/views/upload.html
+++ b/src/views/upload.html
@@ -19,7 +19,7 @@
                     <input type="file" name="file" id="upload_video" required>
                     <button type="submit" id="upload_button">Upload a file</button>
                 </form>
-                <a href="/" class="home-page" id="homep"></a>
+                <a href="/" class="home-page" id="homep">Go to the home page</a>
             </div>
             <div class="uploaded-section">
                 <div class="uploaded-title">
@@ -31,8 +31,13 @@
                         <video class="upload-video" controls width="220px">
                             <source src="/images/video.mp4">
                         </video>
-                        <p class="video-name" contenteditable="true">name</p>
-                    </li>   -->
+                        <span>
+                            <p class="video-name" contenteditable="true">name</p>
+                            <button class="edit-button">
+                                <img class="edit-name" src="/images/edit.png" alt="edit">
+                            </button>
+                          </span>
+                    </li> -->
                 </ul>
             </div>
         </div>
