--- a/src/views/upload.html
+++ b/src/views/upload.html
@@ -15,7 +15,7 @@
                     <label>
                         <h2>Upload media</h2>
                     </label>
-                    <input type="text" name="text" id="vide_name" placeholder="Your video's name">
+                    <input type="text" name="text" id="video_name" placeholder="Your video's name">
                     <input type="file" name="file" id="upload_video" required>
                     <button type="submit" id="upload_button">Upload a file</button>
                 </form>
