--- a/src/views/index.html
+++ b/src/views/index.html
@@ -24,6 +24,11 @@
                             <img class="search-img" src="/images/search.svg" alt="search">
                         </button>
                     </form>
+                    <ul class="bar-list">
+                        <li class="bar-item">Imron</li>
+                        <li class="bar-item">Imron</li>
+                        <li class="bar-item">Imron</li>
+                    </ul>
                 </li>
                 <li class="nav-item">
                     <button type="button" class="upload-btn">
@@ -36,31 +41,12 @@
     <main class="main">
         <div class="users">
             <ul class="user-list">
-                <!-- <li class="user-item">
-                    <img class="user-image" src="http://picsum.photos/40" alt="igm">
-                    <p class="user-name">Imron</p>
-                </li>  -->
+                 
             </ul>
         </div>
         <div class="videos">
             <ul class="vidoe-list">
-                <!-- <li class="video-item">
-                    <video class="upload-video" controls="true" width="450px">
-                        <source src="/images/video.mp4">
-                    </video>
-                    <div class="videos-info">
-                        <div class="vidoe-info">
-                            <img class="video-avatar" src="http://picsum.photos/40" alt="igm">
-                            <span>
-                                <p class="video-user">Imron</p>
-                                <p class="video-name">Video name</p>
-                            </span>
-                        </div>
-                        <button class="down-button" type="button">
-                            <img class="down-image" src="/images/download.png" alt="download">
-                        </button>
-                    </div>
-                </li>    -->
+                
             </ul>
         </div>
     </main>
