Finished search bar

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -19,15 +19,13 @@
                 </li>
                 <li class="nav-item">
                     <form action="" class="nav-form">
-                        <input class="search-input" type="search" name="search" id="search_videos">
+                        <input class="search-input" type="search" name="search" id="search_videos" autocomplete="off">
                         <button class="search-button">
                             <img class="search-img" src="/images/search.svg" alt="search">
                         </button>
                     </form>
                     <ul class="bar-list">
-                        <li class="bar-item">Imron</li>
-                        <li class="bar-item">Imron</li>
-                        <li class="bar-item">Imron</li>
+                        <!-- <li class="bar-item">Imron</li> -->
                     </ul>
                 </li>
                 <li class="nav-item">
