--- a/src/views/index.html
+++ b/src/views/index.html
@@ -19,16 +19,22 @@
                 </li>
                 <li class="nav-item">
                     <form action="" class="nav-form">
+                        <button class="left-btn">
+                            <img class="left-img" src="/images/arrow-left.png" alt="">
+                        </button>
                         <input class="search-input" type="search" name="search" id="search_videos" autocomplete="off">
                         <button class="search-button">
                             <img class="search-img" src="/images/search.svg" alt="search">
                         </button>
                     </form>
                     <ul class="bar-list">
-                        <!-- <li class="bar-item">Imron</li> -->
+
                     </ul>
                 </li>
                 <li class="nav-item">
+                    <button class="res-btn">
+                        <img class="res-img" src="/images/search.svg" alt="search">
+                    </button>
                     <button type="button" class="upload-btn">
                         <img class="upload-img" src="/images/video-upload.svg" alt="video upload">
                     </button>
