--- a/src/views/index.html
+++ b/src/views/index.html
@@ -13,6 +13,9 @@
         <div class="container">
             <ul class="nav-list">
                 <li class="nav-item">
+                    <button class="back-btn">
+                        <img class="back-img" src="/images/arrow-left.png" alt="">
+                    </button>
                     <a href="/" class="nav-link">
                         <img class="yout-img" src="/images/youtube.png" alt="youtube">
                     </a>
